# controllers/User.js
@@ -14,38 +14,6 @@ module.exports.createUser = function createUser (req, res, next) {
     });
 };
 
-module.exports.createUsersWithArrayInput = function createUsersWithArrayInput (req, res, next) {
-  var body = req.swagger.params['body'].value;
-  User.createUsersWithArrayInput(body)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.createUsersWithListInput = function createUsersWithListInput (req, res, next) {
-  var body = req.swagger.params['body'].value;
-  User.createUsersWithListInput(body)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.deleteUser = function deleteUser (req, res, next) {
-  var username = req.swagger.params['username'].value;
-  User.deleteUser(username)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
 
 module.exports.getUserById = function getUserById (req, res, next) {
   var id = req.swagger.params['id'].value;
@@ -69,16 +37,6 @@ module.exports.loginUser = function loginUser (req, res, next) {
     });
 };
 
-module.exports.logoutUser = function logoutUser (req, res, next) {
-  User.logoutUser()
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
 module.exports.updateUser = function updateUser (req, res, next) {
   var username = req.swagger.params['username'].value;
   var body = req.swagger.params['body'].value;
@@ -90,3 +48,34 @@ module.exports.updateUser = function updateUser (req, res, next) {
       utils.writeJson(res, response);
     });
 };
+
+module.exports.forgotPassword = function forgotPassword (req, res, next) {
+  var body = req.swagger.params['body'].value;
+  console.log(body);
+  User.forgotPassword(body)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+
+module.exports.resetPassword = function resetPassword (req, res, next) {
+  var body = req.swagger.params['body'].value;
+  User.resetPassword(body)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+
+
+
+
+
+
