# service/UserService.js
@@ -1,5 +1,44 @@
 'use strict';
 var User = require('../models/user');
+var nodemailer = require('nodemailer');
+
+
+
+/*************Function for send email****************/
+function sendEmail(email) {
+
+  var mailOptions, smtpTransporter;
+  console.log("--------------------------------------------------");
+  smtpTransporter = nodemailer.createTransport({
+    host: 'smtp.gmail.com',
+    port: 465,
+    secure: true,
+    auth: {
+      user: 'memeinfotechnotifications@gmail.com',
+      pass: '18April2018'
+
+    }
+  });
+  console.log("--------------------------------------------------");
+  mailOptions = {
+    from: 'memeinfotechnotifications@gmail.com',
+    to: email,
+    subject: 'Validate your account with the password',
+    html: '<h1>Welcome</h1><div><span><a href="http://mitapi.memeinfotech.com:5015/user/updateStatus?email=' + email + '">this is your link</a></span></div>'
+  };
+  smtpTransporter.sendMail(mailOptions, function (error, info) {
+    if (error) {
+      console.log(error);
+      throw error;
+    }
+    else {
+      console.log('Email sent: ' + info.response);
+    }
+
+  });
+  return smtpTransporter;
+}
+
 
 
 /**
@@ -107,21 +146,6 @@ exports.getUserById = function (id) {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /**
  * Logs user into the system
  * 
@@ -132,34 +156,84 @@ exports.getUserById = function (id) {
  **/
 exports.loginUser = function (body) {
   return new Promise(function (resolve, reject) {
-    User.findOne({ email: body.email, password: body.password },{password:0}, (error, user) => {
+    User.findOne({ email: body.email, password: body.password }, { password: 0 }, (error, user) => {
       console.log(user);
       console.log(error)
       if (error) {
         reject(error);
         return;
       }
-      if(user)
-      resolve(user);
+      if (user)
+        resolve({ error: false, result: user, message: "User get successfully" });
       else
-      resolve({message:"Invalid email or password"})
+        resolve({ message: "Invalid email or password" })
+    })
+
+  });
+}
+
+/********** Api for forgot password  */
+
+exports.forgotPassword = function (body) {
+  return new Promise(function (resolve, reject) {
+    User.findOne({ email: body }, { password: 0 }, (error, user) => {
+      console.log(user);
+      console.log(error)
+      if (error) {
+        reject(error);
+        return;
+      }
+      if (user) {
+        user.email = sendEmail(user.email);
+        resolve({ error: false, message: "Reset link sent to your mail id" });
+      }
+      else
+        resolve({ message: "Invalid email" })
+    })
+
+  });
+}
+
+/******** Api to reset the password *************/
+
+exports.resetPassword = function (body) {
+  return new Promise(function (resolve, reject) {
+
+    let newPassword = body.newPassword;
+
+    User.findOne({ email: body.email }, (error, user) => {
+      console.log(user);
+      console.log(error)
+      if (error) {
+        reject(error);
+        return;
+      }
+      if (user) {
+        user.password = newPassword;
+        user.save(function (err, user) {
+          if (err) {
+            reject(err);
+            return;
+          }
+          else {
+            resolve({ error: false, result: user, message: "Password reset successfully" });
+          }
+
+        })
+      }
+      else
+        resolve({ message: "Invalid email" })
     })
 
   });
 }
 
 
-/**
- * Logs out current logged in user session
- * 
- *
- * no response value expected for this operation
- **/
-exports.logoutUser = function () {
-  return new Promise(function (resolve, reject) {
-    resolve();
-  });
-}
+
+
+
+
+
 
 
 /**
